--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Pdf_Reader</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="tabLayoutTitle">
+        <item >PDF</item>
+        <item >Word</item>
+        <item >Axcel</item>
+    </string-array>
+    <string name="appTitle">PDF Reader</string>
 </resources>
